--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -18,6 +18,15 @@ $darken-1: rgba(0, 0, 0, .0625) !default;
 $darken-2: rgba(0, 0, 0, .125) !default;
 $darken-3: rgba(0, 0, 0, .25) !default;
 
+// Media Query Variables
+$XXS: 400px;
+$XS: 580px;
+$S: 768px;
+$M: 992px;
+$L: 1200px;
+$XL: 1440px;
+$XXL: 1620px;
+
 // Colours
 
 $blue: #489BE8;
