--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -130,7 +130,15 @@
 }
 
 .h-100 {
-  height: 100%;
+  @include MQ(S) {
+    height: 100%;
+  }
+}
+
+.br-desktop {
+  @include MQ(Sneg) {
+    display: none;
+  }
 }
 
 
